// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleBig className 1`] = `
<DocumentFragment>
  <button
    class="toggleBig container c"
    role="switch"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="barShadow"
    />
    <span
      class="d-flex flex-column justify-content-center align-items-center knob"
    />
    <span
      class="text"
    >
      Disabled
    </span>
  </button>
</DocumentFragment>
`;

exports[`ToggleBig disabled 1`] = `
<DocumentFragment>
  <button
    class="toggleBig container"
    disabled=""
    role="switch"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="barShadow"
    />
    <span
      class="d-flex flex-column justify-content-center align-items-center knob"
    />
    <span
      class="text"
    >
      Disabled
    </span>
  </button>
</DocumentFragment>
`;

exports[`ToggleBig value is false 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="toggleBig container"
    role="switch"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="barShadow"
    />
    <span
      class="d-flex flex-column justify-content-center align-items-center knob"
    />
    <span
      class="text"
    >
      Disabled
    </span>
  </button>
</DocumentFragment>
`;

exports[`ToggleBig value is true 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="toggleBig container"
    role="switch"
    type="button"
    value="1"
  >
    <span
      class="bar barOn"
    />
    <span
      class="barShadow barShadowOn"
    />
    <span
      class="d-flex flex-column justify-content-center align-items-center knob knobOn"
    >
      <svg
        class="mdi-icon iconOn"
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </span>
    <span
      class="text textOn"
    >
      Enabled
    </span>
  </button>
</DocumentFragment>
`;
